VERIFIQUEI SE HAVIA ALGUM ERRO NA DOCUMENTAÇÃO DA ROTA DE CRIAÇÃO DE TOKEN PARA ALTERAÇÃO DE SENHA
