# src/routes/routes.js
@@ -10,8 +10,8 @@ router.get('/users', UserLogged, UserController.findAllUsers)
 router.get('/user/:id', UserLogged, UserController.findUser) //OK
 router.put('/user/:id', UserLogged, UserController.edit) //OK
 router.delete('/user/:id', UserLogged, UserController.delete)
-router.post('/recoverpassword/:id', UserLogged, UserController.recoverPassword)
-router.post('/changepassword/:id', UserLogged, UserController.changePassword)
+router.post('/passwordToken/:userId', UserLogged, UserController.passwordToken)
+router.put('/password/:userId', UserLogged, UserController.changePassword)
 router.post('/login', UserController.login) //OK
 
 module.exports = router
